--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
 </ul>
 <hr/>
 <a href="./contact.html">Contact Me</a>
+<footer>
+    <p>Copyright © 2023 Valentin Dumbravescu. All Rights Reserved</p>
+</footer>
 </body>
 </html>
